--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!doctype html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width" initial-scale="1">
+	<title>Module 2 - pleiovn</title>
+	<link rel="stylesheet" href="css/style.css">
+</head>
+<body>
 
+<div class="row">
+	<h1>Fat Ammy's Menu</h1>
+  	<div class="col-lg-4 col-md-6 col-sm-12">
+  		<p class="title">Donuts</p>
+  		<p class="text">A stack of donuts, perfect for those early morning cravings!</p>
+  	</div>
+  	<div class="col-lg-4 col-md-6 col-sm-12">
+  		<p class="title">Hot Dogs</p>
+  		<p class="text">A half dozen hot dogs served with potato chips and a 64oz soda. Take me out to that ball game!</p>
+  	</div>
+  	<div class="col-lg-4 col-md-12 col-sm-12">
+  		<p class="title">Burger</p>
+  		<p class="text">1lb of top quality American ground beef, topped with cheese, pickles, and an onion ring.</p>
+  	</div>
+</div>
+
+</body>
+</html>
