--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div class="row">
 	<h1>Fat Ammy's Menu</h1>
   	<div class="col-lg-4 col-md-6 col-sm-12">
-  		<p class="title">Donuts</p>
+  		<p class="title">Donuts!</p>
   		<p class="text">A stack of donuts, perfect for those early morning cravings!</p>
   	</div>
   	<div class="col-lg-4 col-md-6 col-sm-12">
